Issue 39: Fix UH Axe review section image overlap in IE - pt. 2

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -643,10 +643,10 @@
 
       .product__images__top,
       .product__images__bottom {
-        height: 281px;
+        height: 280px;
 
         @media (max-width: $screen-md-max) {
-          height: 233px;
+          height: 230px;
         }
       }
 
